# GPU_SKELS

./: .clangd  .gitignore  CMakeLists.txt  fetch_rapids.cmake
src/: main.cu
